# agentic-ai

./: DEPLOY_CLI.md  DEPLOY_TO_RENDER.md  README.md  RENDER_DEPLOYMENT.md  RENDER_UI_GUIDE.md  RUNNING_GUIDE.md  SETUP_COMPLETE.md  a2a_handler.py  agent_card.toml  deploy.sh  evaluator.py  launcher_card.toml  main.py  math_problems.json  ngrok.yml  pyproject.toml  render.yaml  requirements.txt  run_agent.py  test_agent.py
